All tests repassing now back in scala land